src/components/JobDetails/JobDetails.scss
@use "../../styles/variables" as *;
@use "../../styles/mixins" as *;

.details {
  display: flex;
  margin: 32px 32px 0;

  &__left {
    display: flex;
    width: 600px;
    flex-direction: column;

    &-wrapper {
      margin: 32px;
      display: flex;
    }

    &-img {
      & img {
        width: 80px;
        height: auto;
        border-radius: 50%;
      }
    }
  }

  &__doctor {
    margin-left: 16px;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;

    &-name {
      font-weight: 500;
      color: black;
    }

    &-address {
      font-weight: 300;
      font-size: 16px;
    }

    &-rate {
      color: green;
      font-weight: 600;
    }
  }

  &__right {
    width: 550px;
    display: flex;
    align-items: center;

    &-image {
      width: inherit;
    }
  }

  &__info {
    margin-left: 32px;

    & p {
      color: black;
    }
  }

  &__button {
    &-email {
      width: 90%;
      background-color: $primary-color-lilac;
      color: white;
    }
  }
}

